macros/tests/ui/gservice_fails_multiple_not_allowed_on_one_impl.stderr
error: multiple `gservice` attributes on the same impl are not allowed
 --> tests/ui/gservice_fails_multiple_not_allowed_on_one_impl.rs:6:1
  |
6 | #[gservice]
  | ^
